# prabandh

./: .env.example  .gitignore  .indexignore  Dockerfile  README.md  compose.yaml  docker-compose.yaml  go.mod  go.sum  indexer.sh  main.go  main.py  prabandh  pyproject.toml
cli/: main.go
controllers/: file.go  index_dir.go  summary.go
database/: database.go
indexer/: indexer.go
llm/ollama/: ollama.go  ollama_test.go
models/: file_index.go  file_summary.go  index_dir.go
pkg/textractor/: extractor.go  extractor_test.go
prisma/: schema.prisma
routers/: file.go  index_dir.go  summary.go
scripts/: indexer.sh  push_file.go  push_index.go  push_summary.go  watchdog.sh
src/: create_tables.py  database.py  file_watchdog.py  indexer.py  models.py  utils.py  watchdog.py
src/app/: models.py  routes.py
