[tool.poetry]
name = "prabandh"
version = "0.1.0"
description = "A cloud synced, ai based file system management tool"
authors = ["Aditya Jyoti aj.adityajyoti@gmail.com, Ankit Prasad ankitprasad2005@gmail.com"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
uuid = "^1.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
